[gd_scene load_steps=4 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/slkscr.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="DeathLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 1 )
text = "Deaths: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeathCount" type="Label" parent="."]
margin_left = 68.0
margin_right = 108.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CooldownLabel" type="Label" parent="."]
margin_left = 1011.0
margin_right = 1051.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostLabel" type="Label" parent="."]
margin_left = 953.0
margin_right = 1019.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 1 )
text = "Ghost: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostCheck" type="Label" parent="."]
margin_left = 968.0
margin_top = 15.0
margin_right = 1024.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
text = "READY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinLabel" type="Label" parent="."]
margin_left = 113.0
margin_top = 243.0
margin_right = 278.0
margin_bottom = 260.0
rect_scale = Vector2( 5, 5 )
custom_fonts/font = SubResource( 1 )
text = "YOU WIN!!!!!!!!!!!!!!!"
__meta__ = {
"_edit_use_anchors_": false
}
